k8s/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: applicationbib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: applicationbib
  template:
    metadata:
      labels:
        app: applicationbib
    spec:
      serviceAccountName: applicationbib-sa
      imagePullSecrets:
        - name: gitlab-registry-secret

      containers:
        - name: applicationbib
          image: registry.gitlab.com/khalilmohamed798/applicationbib:a1f9a88c
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10

          resources:
            requests:
              cpu: "250m"
              memory: "384Mi"
              ephemeral-storage: "256Mi"
            limits:
              cpu: "1"
              memory: "768Mi"
              ephemeral-storage: "512Mi"

          securityContext:
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: tmp
          emptyDir: {}
