k8s/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: applicationbib
  namespace: default
  labels:
    app: applicationbib
spec:
  type: ClusterIP
  selector:
    app: applicationbib
  ports:
    - name: http
      port: 8080
      targetPort: 8080
