k8s/app/networkpolicy.yaml
#Application Pod
#     │
#     ├── PostgreSQL :5432
#     ├── Vault      :8200
#     ├── DNS        :53
#     └── HTTPS      :443 
#the ports numbers is a stander

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: applicationbib-netpol
spec:
  podSelector:
    matchLabels:
      app: applicationbib
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8200
    - ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - ports:
        - port: 443
          protocol: TCP
